--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Producto.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Producto.cshtml
@@ -27,11 +27,11 @@
             $.getJSON(url, { idEmpresa: id }, function (data) {
                 var $select = $('#cuentacontable');
                 if (data == "[]") {
-                    $select.find('option').remove().end().append('<option selected="selected" value="0">SIN CUENTAS</option>').val('0')
+                    $select.find('option').remove().end().append('<option selected="selected" value="0">Sin Productos</option>').val('0')
                     $select.selectpicker("refresh")
                 }
                 else {
-                    $select.find('option').remove().end().append('<option selected="selected" value="0">SELECCIONE CUENTA</option>').val('0')
+                    $select.find('option').remove().end().append('<option selected="selected" value="0">Seleccione un producto</option>').val('0')
                     $.each(JSON.parse(data), function (key, val) {                       
                         $select.append($('<option />', { value: (val['IdEmpresa']), text: val['Descripcion'] }));
                     });
@@ -102,7 +102,7 @@
                                             }
                                             else
                                             {
-                                                <input type="text" class="form-control " disabled value="@ViewBag.Empresas" />
+                                                <input type="text" class="form-control" disabled value="@ViewBag.Empresas" />
                                                 @Html.HiddenFor(m => m.IdEmpresa)
                                             }
                                             @Html.ValidationMessageFor(m => m.IdEmpresa, "", new { @class = "alert-danger" })
@@ -220,7 +220,6 @@
                                 </div>
                                 <div class="row clearfix">
                                     <div class="col-md-8">
-
                                         <b>Descripcion: </b>
                                         <div class="blockquote blockquote-info btn-round">
                                             @Html.TextAreaFor(m => m.Descripcion, new { @class = "form-control", @Rows = 5 })
