--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RequisicionProductoRevisionDTO.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RequisicionProductoRevisionDTO.cshtml
@@ -8,7 +8,7 @@
     <td>@Model.Aplicacion</td>
     <td>@Model.CentroCosto</td>
     <td>@Model.CantidadAlmacenActual</td>
-    <td>@Html.CheckBoxFor(x => x.RevisionFisica)</td>
+    <td>@Html.CheckBoxFor(x => x.RevisionFisica, new { @style = "width: 20px; height: 20px; " })</td>
 </tr>
 
 
