--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PuntoVenta/Index.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/PuntoVenta/Index.cshtml
@@ -48,9 +48,8 @@
                     </div>
                 </div>
 
-             
                 <div class="card">
-                    <div class="body">                      
+                    <div class="body">
                         <div class="row clearfix">
                             <div class="col-lg-12 col-md-12 col-sm-12">
                                 <div class="table-responsive">
@@ -60,39 +59,43 @@
                                                 <th>Gasera</th>
                                                 <th>Unidad</th>
                                                 <th>Punto de venta</th>
-                                                <th>Operador/Chofer</th>                                               
+                                                <th>Operador/Chofer</th>
                                                 <th>Accion</th>
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            @*@foreach (var item in @ViewBag.Clientes)
-                                                {
-
+                                            @foreach (var item in @ViewBag.ListaPV)
+                                            {
                                                 <tr>
-
                                                     <td>@item.Empresa</td>
-                                                    <td>@item.TipoPersonaFiscal</td>
-                                                    <td>@item.RegimenFiscal</td>
-                                                    <td>@item.RazonSocial</td>
-                                                    <td>@item.Rfc</td>
-                                                    <td>@item.limiteCreditoMonto</td>
-                                                    <td>@item.limiteCreditoDias</td>
-                                                    <td>@item.DescuentoXKilo</td>
-                                                    <td>@item.Celular</td>
-                                                    <td>@item.Telefono1</td>
-                                                    <td>@item.Email1</td>
+                                                    <td>@item.UnidadesAlmacen</td>
+                                                    <td>@item.UnidadesAlmacen</td>                                                                                         
+                                                    @if(ViewBag.Usuarios != null)
+                                                    {
                                                     <td>
-                                                        <a ID="lbEdit" href="@Url.Action(" EditarLocaciones", "Clientes" , new { id=item.IdCliente })">
+                                                        <select name="IdUsuario" class="form-control selectpicker z-index show-tick" data-live-search="true">
+                                                            @foreach (var lst in ViewBag.Usuarios)
+                                                            {
+                                                                <option value="@lst.IdUsuario">@lst.Nombre @lst.Apellido1 @lst.Apellido2</option>
+                                                            }
+                                                        </select>
+                                                    </td>}
+                                                    else
+                                                    {
+                                                    <td>@item.OperadorChofer</td>
+                                                    }
+                                                    <td>
+                                                        <a ID="lbEdit" href="@Url.Action("AsignarChofer", "PuntoVenta" , new { idE = item.IdEmpresa,id=item.IdPuntoVenta })">
                                                             <i class="material-icons">edit</i>
                                                             <span class="icon-name"></span>
                                                         </a>
-                                                        <a ID="lbBorrar" href="@Url.Action(" BorrarClientes", "Clientes" , new { id=item.IdCliente })">
+                                                        <a ID="lbBorrar" href="@Url.Action("BorrarPuntpVenta", "PuntoVenta" , new {idE = item.IdEmpresa, id=item.IdPuntoVenta })">
                                                             <i class="material-icons">delete</i>
                                                             <span class="icon-name"></span>
                                                         </a>
                                                     </td>
                                                 </tr>
-                                                }*@
+                                            }
                                         </tbody>
                                     </table>
                                 </div>
@@ -102,10 +105,36 @@
                     </div>
                 </div>
 
+                @if (ViewBag.MessageExito != "" && ViewBag.MessageExito != null)
+                {
+
+                    <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-green p-r-35 animated fadeInDown"
+                         role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
+                         bottom: 20px; left: 0px; right: 0px;">
+                        <a href="#" class="close" data-dismiss="alert" aria-label="close">x</a>
+                        <span data-notify="icon"></span>
+                        <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageExito</span>
+                        <a href="#" target="_blank" data-notify="url"></a>
+                    </div>
+                }
+
+                @if (ViewBag.MessageError != "" && ViewBag.MessageError != null)
+                {
+                    <div data-notify="container" class="bootstrap-notify-container alert alert-dismissible bg-red p-r-35 animated fadeInDown"
+                         role="alert" data-notify-position="bottom-center" style="display: inline-block; margin: 0px auto; position: fixed; transition: all 0.5s ease-in-out 0s; z-index: 1031;
+                         bottom: 20px; left: 0px; right: 0px;">
+                        <a href="#" class="close" data-dismiss="alert" aria-label="close">x</a>
+                        <span data-notify="icon"></span>
+                        <span data-notify="title"></span> <span data-notify="message">@ViewBag.MessageError</span><a href="#" target="_blank" data-notify="url"></a>
+                    </div>
+                }
+
             </div>
         </div>
     </section>
 
 }
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 
