--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/Ordenes.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/OrdenCompra/Ordenes.cshtml
@@ -1,10 +1,11 @@
 ﻿@using MVC.Presentacion.Models.OrdenCompra;
+@using PagedList.Mvc;
+@using PagedList;
 @model OrdenesCompraModel
 @{
     string EnabledAdminCentral = Convert.ToBoolean(ViewBag.EsAdminCentral).Equals(false) ? "disabled" : "";
 }
 <link rel="stylesheet" href="~/assets/plugins/bootstrap-colorpicker/css/bootstrap-colorpicker.css" />
-<link href="~/assets/plugins/bootstrap-select/css/bootstrap-select.css" rel="stylesheet" />
 
 <body style="padding-top:10px">
     @using (Html.BeginForm("Ordenes", "OrdenCompra", FormMethod.Post))
@@ -56,7 +57,7 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        @foreach (var _req in Model.Requisiciones)
+                                        @foreach (var _req in ViewBag.Requisiciones)
                                         {
                                             <tr>
                                                 <td>@_req.NombreComercial</td>
@@ -74,6 +75,14 @@
                                         }
                                     </tbody>
                                 </table>
+                            </div>
+                            <div class="row clearfix">
+                                <div class="col-md-6">
+                                    Pagina @(ViewBag.Requisiciones.PageCount < ViewBag.Requisiciones.PageNumber ? 0 : ViewBag.Requisiciones.PageNumber) de @ViewBag.Requisiciones.PageCount
+                                </div>
+                                <div class="col-md-6 text-right">
+                                    @Html.PagedListPager((IPagedList)ViewBag.Requisiciones, pageR => Url.Action("Ordenes", new { pageR, @class = "btn btn-primary btn-simple" }))
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -166,7 +175,7 @@
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            @foreach (var _oc in Model.OrdenesCompra)
+                                            @foreach (var _oc in ViewBag.Ordenes)
                                             {
                                                 <tr>
                                                     <td>@_oc.Empresa</td>
@@ -207,6 +216,14 @@
                                             }
                                         </tbody>
                                     </table>
+                                </div>
+                            </div>
+                            <div class="row clearfix">
+                                <div class="col-md-6">
+                                    Pagina @(ViewBag.Ordenes.PageCount < ViewBag.Ordenes.PageNumber ? 0 : ViewBag.Ordenes.PageNumber) de @ViewBag.Ordenes.PageCount
+                                </div>
+                                <div class="col-md-6 text-right">
+                                    @Html.PagedListPager((IPagedList)ViewBag.Ordenes, pageO => Url.Action("Ordenes", new { pageO, @class = "btn btn-primary btn-simple" }))
                                 </div>
                             </div>
                         </div>
