--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/RequisicionRevision.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Requisicion/RequisicionRevision.cshtml
@@ -96,6 +96,7 @@
                                     </div>
                                     @if (ViewBag.MensajeError != null)
                                     {
+                                        <br />
                                         <div class="row clearfix">
                                             <div id="divCampos" class="container">
                                                 <div class="alert alert-danger">
@@ -191,7 +192,7 @@
             </div>
         </div>
         <div class="modal fade" id="ModalConfirmacion" tabindex="-1" role="dialog">
-            <div class="modal-dialog modal-sm margin-0" role="document">
+            <div class="modal-dialog modal-sm" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
                         <h4 class="title" id="ModalConfirmacionLabel">¿Esta seguro?</h4>
