--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RequisicionProductoRevisionDTO.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/RequisicionProductoRevisionDTO.cshtml
@@ -1,5 +1,6 @@
 ﻿@model MVC.Presentacion.Models.Requisicion.RequisicionProductoRevisionDTO
 @Html.HiddenFor(m => m.IdProducto)
+@Html.HiddenFor(m => m.Orden)
 <tr>
     <td>@Model.TipoProducto</td>
     <td>@Model.Producto</td>
